UI improvements, add League (group ranking), add virtual Coins. adjust 2026 games